--- a/settings/settings.json
+++ b/settings/settings.json
@@ -2,27 +2,36 @@
   "savedKey": "bingosettings",
   "settings": [
     {
-      "name": "印刷時のカードのヘッターの文字表示",
-      "savedName": "printCardHeaderDisplay",
-      "settingType": "boolean",
+      "name": "印刷時のカードのヘッターの文字非表示",
+      "savedName": "printCardHeaderHidden",
       "settingInputType": "checkbox",
-      "initial": true,
+      "initial": false,
       "flag": false
     },
     {
-      "name": "印刷時のカードのIDの表示",
-      "savedName": "printCardIDdisplay",
-      "settingType": "boolean",
+      "name": "印刷時のカードのIDの表示を消す",
+      "savedName": "printCardIDhidden",
       "settingInputType": "checkbox",
-      "initial": true,
+      "initial": false,
       "flag": false
     },
     {
       "name": "印刷時のカードのヘッターのアイコン",
       "savedName": "printCardHeaderIcon",
-      "settingType": "boolean",
       "settingInputType": "file",
-      "initial": false,
+      "flag": false
+    },
+    {
+      "name": "ビンゴマシーンのヘッター部分のロゴ",
+      "savedName": "machineDefaltHeaderIcon",
+      "settingInputType": "file",
+      "flag": false
+    },
+    {
+      "name": "印刷時のカードのヘッターのアイコンの位置",
+      "savedName": "printCardHeaderIconPosition",
+      "settingInputType": "text",
+      "initial": "left",
       "flag": false
     }
   ]
