--- a/package.json
+++ b/package.json
@@ -1,5 +1,36 @@
 {
+  "name": "bingo",
+  "description": "これはウェブでビンゴを行うためのアプリです。",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chakkun1121/bingo.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/chakkun1121/bingo/issues"
+  },
+  "homepage": "https://github.com/chakkun1121/bingo#readme",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron-forge start",
+    "build": "electron-packager . --overwrite",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "electron": "electron ."
+  },
+  "author": "chakkun1121",
+  "license": "ISC",
+  "devDependencies": {
+    "@electron-forge/cli": "^6.0.5",
+    "@electron-forge/maker-deb": "^6.0.5",
+    "@electron-forge/maker-rpm": "^6.0.5",
+    "@electron-forge/maker-squirrel": "^6.0.5",
+    "@electron-forge/maker-zip": "^6.0.5",
+    "electron": "^22.0.3"
+  },
   "dependencies": {
-    "http-server": "^14.1.1"
+    "electron-squirrel-startup": "^1.0.0"
   }
 }
