--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "homepage": "https://github.com/chakkun1121/bingo#readme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"http-server",
     "start": "electron-forge start",
     "build": "electron-packager . --overwrite",
     "package": "electron-forge package",
@@ -31,6 +32,7 @@
     "electron": "^22.0.3"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "http-server": "^14.1.1"
   }
 }
