--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/node": "20.5.6",
-    "@types/react": "18.2.21"
+    "@types/node": "20.5.8",
+    "@types/react": "18.2.21",
+    "tailwindcss": "^3.3.3"
   }
 }
