--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "author": "chakkun1121",
   "dependencies": {
-    "autoprefixer": "^10.4.15",
     "next": "^13.4.19",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
@@ -30,6 +29,8 @@
   "devDependencies": {
     "@types/node": "20.5.8",
     "@types/react": "18.2.21",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3"
   }
 }
