--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "author": "chakkun1121",
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "next": "^13.4.19",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
